There are several impotant updates in this commit: -  Improved the setup and configuration process to make it more intuitive, including adding an option to create the default (view-definitions) View Definition automatically -  Fixed and improved category/sub-category creation and expansion/collapse -  Cleaned up the View Definition UI -  Added additional client sorting fields in the View Definition -  Fixed totals options including totaling up for each category/subcategory and showing totals in the footer -  Added ability to total # of rows or total the values for a column in each row -  Added a category renderer option to the View Definition -  Added a footer callback option - Reduced expression language evaluations on ccRestView -  Added a stats component to the View object

--- a/ODP/Resources/StyleSheets/ccRestView.css
+++ b/ODP/Resources/StyleSheets/ccRestView.css
@@ -226,11 +226,40 @@ div.dts {
 .centerText {text-align:center}
 .leftText {text-align:left}
 .twistie {margin-right:5px}
+.twistie-expand::before{
+	content:'-';
+	font-size:1.25em;
+}
+.twistie-collapse::before {
+	content:'+';
+	font-size:1.25em;
+}
 
+.adminViewDefinitionDoc .radio fieldset table tbody td {padding:1px 7px;background:transparent}
+.adminViewDefinitionDoc .radio fieldset table tr {background:transparent}
+.panelCategoryRenderer {
+	box-shadow: 2px 2px 5px 5px;
+	position:fixed;
+	width:300px;
+	height:125px;
+	top:50%;
+	left:50%;
+	background:#ffffff;
+	margin-top:-100px;
+	margin-left:-100px;
+	display:none;
+}
+.panelCategoryRendererTitle {padding:5px;font-weight:bold}
+.panelCategoryRendererBody textarea {width:100%;height:100%;padding:10px}
 
+div[data-function] {color:222}
+div[data-function=""] {color:#999}
+.category-renderer:before {
+	content:'@'
+}
 
-
-
+/* footer */
+.footer_total {font-weight:bold;}
 
 
  
